Add manifest, ServiceWorker, and Sign in completed.

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <meta name="msapplication-TileColor" content="#2F3BA2">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="assets/manifest.json">
+  <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
 
 </head>
